# adhoc_public

./: README.md  pyproject.toml
notebooks/: 250402_fetch_news_ai.ipynb
src/adhoc/: news_summarizer.py  url_fetch.py
